# delta

./: .gitmodules  build.gradle.kts  native-lib.cpp  settings.gradle.kts
.github/workflows/: android-build.yml  build.yml
app/: build.gradle.kts  google-services.json  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/pacman/: index.html  pacman.js
app/src/main/assets/skin/: uiskin.json
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/example/launcher/: MainActivity.kt
app/src/main/java/com/kakdela/p2p/: MainActivity.kt  MyApplication.kt
app/src/main/java/com/launcher/multiapp/: MainActivity.kt  TyrApplicationWrapper.kt  TyrInitHelper.java  TyrInitializer.kt  UniversalApplication.kt
app/src/main/java/com/mystery_of_orient_express/: MysteryOfOrientExpress.java
app/src/main/res/color/: text_color_secondary.xml
app/src/main/res/drawable/: banner.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_music_placeholder.xml  ic_p2p_node.xml  ic_pip.xml  ic_vpn.xml
app/src/main/res/layout/: activity_termux.xml  activity_video_player.xml  item_video.xml  layout_playlist.xml  linearlayout_termux_sessions_list.xml  partial_primary_toolbar.xml
app/src/main/res/values/: attrs.xml  colors.xml  refs.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/xml/: dc_file_paths.xml  file_paths.xml
delta/: build.gradle
delta/.github/workflows/: build-main.yml
delta/jni/: Application.mk
delta/scripts/: ndk-make.sh
delta/src/main/: AndroidManifest.xml
delta/src/main/java/org/thoughtcrime/securesms/: ApplicationPreferencesActivity.java  ConversationListActivity.java
delta/src/main/res/layout/: activity_application_preferences.xml  activity_registration_2nd_device_qr.xml  conversation_list_item_view.xml
delta/src/main/res/values/: attrs.xml  ids.xml  strings.xml  styles.xml  themes.xml
delta/src/main/res/values-ru/: strings.xml
gradle/: libs.versions.toml
tyr/: .gitignore  README.md  README.ru.md
tyr/.github/workflows/: android.yml
tyr/app/: build.gradle
tyr/app/src/main/: AndroidManifest.xml
tyr/app/src/main/res/color/: text_color_secondary.xml
tyr/app/src/main/res/color-night/: nav_item_tint.xml  text_color_secondary.xml
tyr/app/src/main/res/drawable/: bottom_nav_background.xml  bubble_received.xml  bubble_sent.xml  ic_attach.xml  ic_cached.xml  ic_chat.xml  ic_check_double.xml  ic_check_single.xml  ic_file.xml  ic_image.xml  ic_launcher_monochrome.xml  ic_person_add.xml  ic_qr_code_scanner.xml  ic_reply.xml  ic_speed.xml
tyr/app/src/main/res/layout/: activity_conversation.xml  activity_main.xml  activity_onboarding.xml  activity_settings.xml  bottom_sheet_add_contact.xml  dialog_contact_profile.xml  dialog_discovered_peers.xml  dialog_discovered_peers_realtime.xml  dialog_find_peers.xml  dialog_image_preview.xml  dialog_my_profile.xml  dialog_qr_code.xml  dialog_unread_quota.xml  fragment_chat.xml  fragment_onboarding_password.xml  fragment_onboarding_peers.xml  fragment_settings.xml  item_chat_contact.xml  item_date_separator.xml  item_discovered_peer.xml  item_message_received.xml  item_message_sent.xml
tyr/app/src/main/res/menu/: bottom_nav_menu.xml  menu_add_peer.xml  menu_chat.xml  menu_conversation.xml  menu_logs.xml
tyr/app/src/main/res/values/: strings.xml  themes.xml
tyr/app/src/main/res/values-night/: themes.xml
tyr/app/src/main/res/values-ru/: strings.xml
tyr/app/src/main/res/xml/: data_extraction_rules.xml  file_paths.xml
tyr/fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
tyr/fastlane/metadata/android/en-US/changelogs/: 17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt
tyr/fastlane/metadata/android/ru-RU/: full_description.txt  short_description.txt
tyr/fastlane/metadata/android/ru-RU/changelogs/: 17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt
(+108 files in other folders)
